# mjar

./: .gitignore  CMakeLists.txt  README.md  README_en.md  aes.c  com_github_jsbxyyx_mjar_Mjarencrypt.h  mjar.cpp  mjar.h  pkcs7_padding.c  pkcs7_padding.h  pkcs7_padding.hpp  readme.txt  sha1.c  sha1.h  sha1.hpp  stringutils.c  stringutils.h  stringutils.hpp
.github/workflows/: jni.yml
testjar/: application.properties
